# detent

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.tools  GEMINI.md  INSTALLATION.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  detent.yaml  main.py  pyproject.toml
.detent/session/: default.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  pre-publish.yml  publish.yml  security.yml  stale.yml
.gitlab/: detent.yml
action/: action.yml
action/scripts/: get-changed-files.sh  run-detent.sh
benchmarks/: bench_checkpoint.py  bench_pipeline.py  conftest.py
detent/: __init__.py  circuit_breaker.py  cli.py  config.py  schema.py
detent/adapters/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  gemini.py  http_proxy.py  langgraph.py  litellm.py  openapi.py
detent/adapters/hook/: __init__.py  base.py  claude_code.py  codex.py  gemini.py  litellm.py  openapi.py
detent/adapters/http/: base.py  claude_code.py  codex.py  cursor.py  providers.py
detent/checkpoint/: __init__.py  engine.py  savepoint.py  schemas.py
detent/cli/: __init__.py  app.py  config.py  init.py  proxy.py  rollback.py  run.py  session.py  status.py  utils.py
detent/config/: __init__.py  languages.py
detent/feedback/: __init__.py  schemas.py  synthesizer.py
detent/ipc/: __init__.py  channel.py  schemas.py
detent/observability/: __init__.py  exporter.py  logging.py  metrics.py  schemas.py  tracer.py
detent/pipeline/: __init__.py  pipeline.py  result.py
detent/proxy/: __init__.py  http_proxy.py  session.py  types.py
detent/stages/: __init__.py  _subprocess.py  base.py  go.py  javascript.py  lint.py  lint_js.py  python.py  rust.py  syntax.py  tests.py  tests_js.py  typecheck.py  typecheck_js.py
detent/stages/languages/: __init__.py  _go.py  _rust.py
detent/stages/lint/: __init__.py  _clippy.py  _eslint.py  _go_vet.py  _ruff.py  base.py
detent/stages/security/: __init__.py  _dep_scan.py  _secrets.py  base.py
detent/stages/syntax/: __init__.py  base.py
detent/stages/tests/: __init__.py  _cargo_test.py  _go_test.py  _jest.py  _pytest.py  base.py
detent/stages/typecheck/: __init__.py  _cargo_check.py  _go_build.py  _mypy.py  _tsc.py  base.py
docker/: docker-compose.yml
docs/: overview.md
docs/architecture/: README.md  checkpoint-engine.md  dual-point-interception.md  feedback-synthesis.md  verification-pipeline.md
docs/plans/: 2026-03-03-phase-2-checkpoint-engine.md
docs/plans/v0.1/: overview.md  phase-2-checkpoint-engine.md  phase-3-verification-stages.md
docs/superpowers/plans/: 2026-03-14-go-rust-stages.md
docs/tutorials/: 01-getting-started.md  02-claude-code.md  03-codex.md  04-gemini.md  05-langgraph.md  README.md
tests/: conftest.py
tests/integration/: test_action_scripts.sh  test_adapter_session_integration.py  test_cli_workflow.py  test_go_integration.py  test_js_ts_integration.py  test_otel_pipeline.py  test_proxy_ipc_full_flow.py  test_rust_integration.py  test_sast_dast_integration.py  test_security_integration.py
tests/integration/adapters/: test_logging_flow.py
tests/unit/: test_adapter_base.py  test_adapter_hook.py  test_adapter_http_proxy.py  test_adapter_litellm.py  test_checkpoint_engine.py  test_circuit_breaker.py  test_claude_code_adapter.py  test_cli_commands.py  test_cli_init.py  test_cli_run.py  test_cli_session.py  test_cli_status_rollback.py  test_config.py  test_feedback_synthesizer.py  test_http_proxy.py  test_ipc_channel.py  test_langgraph_adapter.py  test_lint_js.py  test_lint_stage.py  test_observability.py  test_pipeline.py  test_result.py  test_schema.py  test_sdk_exports.py  test_session_manager.py  test_stage_base.py  test_syntax_stage.py  test_tests_js.py  test_tests_stage.py  test_typecheck_js.py  test_typecheck_stage.py
tests/unit/adapters/: test_adapter_hook.py  test_adapter_http_proxy.py  test_adapter_litellm.py  test_adapter_logging.py  test_claude_code_adapter.py  test_claude_code_hook.py  test_claude_code_response_parsing.py  test_codex_hook.py  test_hook_exception_safety.py  test_http_proxy.py  test_http_proxy_observation.py  test_langgraph_adapter.py
tests/unit/checkpoint/: test_checkpoint_engine.py
tests/unit/cli/: test_cli_commands.py  test_cli_config.py  test_cli_init.py  test_cli_proxy.py  test_cli_run.py  test_cli_run_json.py  test_configure_claude_code_hook.py  test_configure_codex_hook.py
(+13 files in other folders)
